--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,9 @@
 .social-list li a:hover {
   background: #2196f3; 
 }
+svg {
+  fill: inherit;
+}
 
 
 .container {
@@ -504,6 +507,7 @@ ul {
 .features-list-li:nth-child(4)::before {
   background-image: url("photo_2025-09-14_12-33-14.jpg.svg");
 }
+
 
 
 
