--- a/styles.css
+++ b/styles.css
@@ -30,15 +30,14 @@
 .close-btn {
   width: 40px;
   height: 40px;
-  background: rgba(255,255,255,0.9);
+  background: rgba(255, 255, 255, 0.9);
   border-radius: 50%;
-  border: 1px solid #ddd;
+  border: 1px solid #000; 
   position: absolute;
   top: 10px;
   right: 10px;
   cursor: pointer;
 }
-
 
 .close-btn::before,
 .close-btn::after {
@@ -48,7 +47,7 @@
   left: 50%;
   width: 24px;
   height: 3px;
-  background: #000;
+  background: #000; 
   transform-origin: center;
 }
 
@@ -787,6 +786,7 @@ ul {
 .features-list-li:nth-child(4)::before {
   background-image: url("photo_2025-09-14_12-33-14.jpg.svg");
 }
+
 
 
 
