--- a/styles.css
+++ b/styles.css
@@ -80,41 +80,24 @@
 
 
 
-input[type="checkbox"] {
-  appearance: auto !important;
-  -webkit-appearance: auto !important;
-
-  width: 18px !important;
-  height: 18px !important;
-
-  display: inline-block !important;
-
-  position: static !important;
-  opacity: 1 !important;
-
-  margin: 0 !important;
-  padding: 0 !important;
-}
-
 .agree-line {
-  color: black !important;
   display: flex !important;
+  flex-direction: row !important;
   align-items: center !important;
   gap: 8px !important;
-  white-space: nowrap !important; 
+  white-space: nowrap !important;
+  color: black !important;
+}
+
+.agree-line input[type="checkbox"] {
+  appearance: auto !important;
+  width: 18px;
+  height: 18px;
 }
 
 .agree-line span {
-  color:black !important;
-  white-space: nowrap !important;
   display: inline !important;
 }
-
-.agree-line a {
-  color: blue !important;
-  white-space: nowrap !important;
-}
-
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
@@ -827,6 +810,7 @@ ul {
 .features-list-li:nth-child(4)::before {
   background-image: url("photo_2025-09-14_12-33-14.jpg.svg");
 }
+
 
 
 
