--- a/styles.css
+++ b/styles.css
@@ -27,37 +27,42 @@
     transition: border-color 0.3s ease;
 }
 
-.close-btn {
+.close-circle {
   width: 40px;
   height: 40px;
-  background: rgba(255, 255, 255, 0.9);
+  background: white;
   border-radius: 50%;
-  border: 1px solid #000; 
+  border: 1px solid rgba(0,0,0,0.2);
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 15px;
+  right: 15px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   cursor: pointer;
 }
 
-.close-btn::before,
-.close-btn::after {
+/* Дві палички хрестика */
+.close-circle::before,
+.close-circle::after {
   content: "";
   position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 24px;
-  height: 3px;
-  background: #000; 
-  transform-origin: center;
+  width: 20px;
+  height: 2px;
+  background: black;
+  border-radius: 2px;
 }
 
-.close-btn::before {
-  transform: translate(-50%, -50%) rotate(45deg);
+.close-circle::before {
+  transform: rotate(45deg);
 }
 
-.close-btn::after {
-  transform: translate(-50%, -50%) rotate(-45deg);
+.close-circle::after {
+  transform: rotate(-45deg);
 }
+
 
 
 
@@ -810,6 +815,7 @@ ul {
 .features-list-li:nth-child(4)::before {
   background-image: url("photo_2025-09-14_12-33-14.jpg.svg");
 }
+
 
 
 
