--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,18 @@
 }
 
 
+.nav-menu a::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background: red;
+    bottom: 0;
+    left: 0;
+    transition: transform  0.49s ease-in-out ;
+    transform: scaleX(0);
+    border-radius: 2px;
+}
 
 
 
@@ -815,6 +827,7 @@ ul {
 .features-list-li:nth-child(4)::before {
   background-image: url("photo_2025-09-14_12-33-14.jpg.svg");
 }
+
 
 
 
