--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,46 @@
   --hover-color: #188CE8;
 }
 
+.nav a {
+  position: relative;
+  display: inline-block;
+  font-weight: 500;
+  color: #212121;
+  padding-bottom: 4px;          /* трохи місця під текстом */
+  transition: color .2s ease;
+}
+
+/* синя лінія під пунктом меню */
+.nav a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 3px;
+  background: #2196f3;
+  border-radius: 2px;
+
+  transform: scaleX(0);         /* схована */
+  transform-origin: center;     /* з центру */
+  transition: transform .3s ease;
+}
+
+/* колір тексту + поява лінії при наведенні */
+.nav a:hover,
+.nav a.active {
+  color: #2196f3;
+}
+
+.nav a:hover::after,
+.nav a.active::after {
+  transform: scaleX(1);         /* лінія виростає з центру */
+}
+
+
+
+
+
 .box {
     width: 170px;
     height: 92px;
@@ -827,6 +867,7 @@ ul {
 .features-list-li:nth-child(4)::before {
   background-image: url("photo_2025-09-14_12-33-14.jpg.svg");
 }
+
 
 
 
