--- a/SCSS/utils.css
+++ b/SCSS/utils.css
@@ -1,1 +1,20 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
+body {
+  font-family: 'Roboto', sans-serif;
+  color: #212121;
+  background-color: #fff;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+ul {
+  list-style: none;
+}
